# infinite-coding-loop

./: .gitignore  .versionrc.js  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  audit_results.json  audit_results_final.json  clippy_errors.txt  clippy_output.txt  docker-compose.yml  ideas.md  ifcl.db  junit_eslint.txt  package-lock.json  package.json  update_ontology.py
.constitution/: Constitution.md  SafetyPolicy.md  StyleGuide.md
.github/workflows/: release.yml
MyNewApp/.infinitecodingloop/: icl.json
MyNewApp/spec/: softwareapplication.json
apps/dass-cli/: Cargo.toml
apps/dass-tui/: Cargo.toml
apps/ontology-visualizer/: deploylocal.md  index.html  package.json
apps/pulpo-cli/: Cargo.toml
apps/pulpo-cli/src/: main.rs
apps/pulpo-cli/tests/: cli_test.rs
apps/pulpo-tui/: Cargo.toml
apps/pulpo-visualizer/: deploylocal.md  index.html  package-lock.json  package.json
core/: Cargo.toml
core/src/: lib.rs
crates/dass-cli/: Cargo.toml
crates/dass-cli/src/: main.rs
crates/dass-cli/tests/: cli_test.rs
crates/dass-e2e/: Cargo.toml
crates/dass-engine/: Cargo.toml  build.rs
crates/dass-engine/ontology/schemas/meta/: agent.schema.json  artifact.schema.json  base.schema.json  icl.schema.json
crates/dass-engine/src/: config.rs  interaction.rs  lib.rs  orchestrator.rs
crates/dass-engine/src/agents/: architect.rs  cli_client.rs  engineer.rs  generic.rs  mod.rs  planner.rs  product_manager.rs  qa.rs
crates/dass-engine/src/clover/: mod.rs
crates/dass-engine/src/domain/: application.rs  db.rs  mod.rs  primitive.rs  types.rs
crates/dass-engine/src/gates/: ambiguity.rs  consistency.rs  mod.rs  safety.rs  verifier.rs
crates/dass-engine/src/graph/: executor.rs  mod.rs  validation_test.rs
crates/dass-engine/src/plan/: action.rs  executor.rs
crates/dass-engine/src/product/: mod.rs  requirement.rs
crates/dass-engine/src/spec/: feature_spec.rs  mod.rs
crates/dass-engine/tests/: engine_integration_test.rs  git_commit_integration_test.rs  logging_integration_test.rs  schema_injection_test.rs  schema_validation_test.rs
crates/dass-tui/: Cargo.toml
crates/ontology-tools/: Cargo.toml
crates/tui/: Cargo.toml  ifcl.db
docs/: BRAND_IDENTITY.md
docs/adr/: 0001-monorepo-layout.md
ifcl-core/: Cargo.toml
ifcl-core/src/: agent.rs  ai_worker.rs  cli_worker.rs  context.rs  groups.rs  learning.rs  lib.rs  marketplace.rs  memory.rs  orchestrator.rs  planner.rs  planner_worker.rs  progress.rs  session.rs  session_replay_tests.rs  task_test_driver.rs  ui_state.rs  wizard.rs  workspace.rs
ifcl-core/tests/: e2e_loop_test.rs
marketplace/groups/: default_team.json
marketplace/workers/: market_bot.json
ontologies/software-engineering/: ontology.ttl  package.json
ontology/: ontology.ttl
ontology-schema/: package.json
ontology-software-engineering/: ontology.json  ontology.ttl
ontology-software-engineering/agents/: architect.json  engineer.json  manager.json  product_manager.json  qa.json
ontology-software-engineering/prompts/: Architect_defines_ArchitectureStyle.md  ProductManager_creates_Requirement.md  QA_verifies_Requirement.md
ontology-software-engineering/schemas/: agent_config.schema.json  base.schema.json
ontology-visualizer/: .gitignore  package-lock.json  package.json  vite.config.ts
ontology-visualizer/playwright-report/: index.html
ontology-visualizer/public/: ontology.json
ontology-visualizer/src/: App.tsx  index.css  types.ts
ontology-visualizer/test-results/: .last-run.json
ontology-visualizer/tests/: edge_grouping.spec.ts  simulation.spec.ts  smoke.spec.ts
ontology/agents/: engineer.json  manager.json  qa.json
ontology/prompts/: Agent_analyzes_SoftwareApplication.md  Agent_uses_SoftwareApplication.md  ProductManager_defines_Requirement.md
ontology/schemas/: agent_config.schema.json  base.schema.json  metamodel.schema.json  taxonomy.schema.json
pulpo-ontologies/software-engineering/: ontology.json  ontology.ttl  package.json
scripts/: bump_version.sh  cargo-updater.js  root-cargo-updater.js  verify_traces.sh  viz_schema.js
spec/: How_to_visualize_ontology.md  How_to_visualize_pulpo_ontology.md  Why_A_Pulpo_Ontology.md  Why_An_Ontology.md  browser_testing.md  data_spec.md  dev_flow.md  feature_list.md  infinite_loop_software_engineering_product_development.md  original_concept.md  product_spec.md  progress.md  roadmap_fundamental_refactor.md  schema_verification.md  tech_spec.md  ui_ux_spec.md
spec/agents/: architect.json  product_manager.json
spec/dass/: roadmap_fundamental_refactor.md
tests/dass-e2e/: Cargo.toml
tests/pulpo-e2e/: Cargo.toml
tests/pulpo-e2e/fixtures/mini_pulpo_ontology/: ontology.json
tests/pulpo-e2e/fixtures/mini_pulpo_ontology/agent/: ProductManager.json
tests/pulpo-e2e/fixtures/mini_pulpo_ontology/agent/system_prompt/: engineer.md
tests/pulpo-e2e/fixtures/mini_pulpo_ontology/artifact/schema/: execution_result.schema.json  feature.schema.json
tests/pulpo-e2e/fixtures/mini_pulpo_ontology/relationship/prompt/: Architect_creates_ProjectStructure.md  Engineer_creates_Plan.md  Engineer_implements_Code.md
tests/pulpo-e2e/tests/: cli_gen_test.rs  loop_test.rs  mock_loop_test.rs  real_pulpo_ontology_test.rs
tui/: Cargo.toml
tui/calculator_bot/rust_calculator/src/: main.rs
tui/src/: app.rs  cli.rs  main.rs  relationship.rs  state.rs
tui/src/ui/: mod.rs
(+474 files in other folders)
