[workspace]
resolver = "2"
members = [
    "core",
    "tui",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["events"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
