[package]
name = "ifcl-core"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
regex = "1.10"

[dev-dependencies]
tempfile = { workspace = true }
