[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ifcl-core = { path = "../ifcl-core" }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
