[package]
name = "dass-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
console = "0.16.2"
dass-engine = { version = "0.1.0", path = "../dass-engine" }
dialoguer = "0.12.0"
indicatif = "0.18.3"
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
