[package]
name = "dass-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror = "2.0.18"
uuid = { workspace = true, features = ["v4", "serde"] }
sqlx = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
chrono = { workspace = true, features = ["serde"] }
petgraph.workspace = true

[build-dependencies]
schemars = "0.8"
serde_json.workspace = true
typify = "0.5.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile.workspace = true
