[package]
name = "pulpo-e2e"
version = "0.1.1"
edition = "2024"

[dependencies]

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true
pulpo-engine = { workspace = true }
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
e2e = []
